--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,13 @@
   </div>
   <div id="ooi-footer" class="uk-text-center">
     <hr>
-    <address><a href="http://kancolle.tv" target="_blank">海平线镇守府</a> &copy; 2014-2016</address>
+    <address><a href="http://kancolle.tv" target="_blank">海平线镇守府</a> &copy; 2017</address>
   </div>
 </div>
 <div class="statistics">
+</div>
+<div id="pixiv-top10">
+<iframe src="http://static.yuudachi.moe/index.php" frameborder="0"  style="width:240px; height:380px;"></iframe>
 </div>
 </body>
 </html>
