--- a/templates/form.html
+++ b/templates/form.html
@@ -46,10 +46,12 @@
     </div>
     <div id="ooi-announcement" class="uk-width-medium-3-5">
       <h2 class="uk-text-primary">提示</h2>
-      <p>本站采用了OOI系统，OOI (Online Objects Integration)是针对DMM网页游戏《艦隊これくしょん -艦これ-》的在线缓存系统。</p>
+	            <p>您已登录到yuudachi.moe的OOI主线服务器，你所登录的服务器将由系统自动判断并选择当前响应速度最快的服务器进行登录</p>
+      <p>本站采用了OOI系统，OOI (Online Objects Integration)是针对DMM网页游戏《艦隊これくしょ
+ん -艦これ-》的在线缓存系统。</p>
       <p>本站只支持DMM账号登录，不支持Facebook和Google账号登录。本网站不会保存任何用户信息，并对本网站服务可能造成的任何后果不负责任。</p>
+	  <p>如果你愿意支持本站，欢迎向poi@yuudachi.moe (Alipay)捐助，你的捐助将用于购买更加稳定的VPS，同时，本站会为你提供<a href="http://ss.yuudachi.moe" target="_blank">Shadowsocks服务</a></p>
       <p>本站的源代码已更新到OOI3，该项目代码采用AGPLv3许可证开源，发布于 <a href="https://github.com/acgx/ooi3" target="_blank">此版本库</a>。</p>
-      <p>如果希望资助我们的项目，可以通过<a href="http://bbs.kancolle.tv/thread-4812-1-1.html" target="_blank">购买赞助商产品</a>的方式支持我们。</p>
-      <p>OOI用户QQ群：337440297 | <a href="https://github.com/acgx/ooi3/issues" target="_blank">汇报bug</a></p>
-    </div>
+      <p>QQ群：247300286 欢迎前来围观群主女装</p>    
+</div>
 {%- endblock %}
