修改前段页面信息

--- a/templates/form.html
+++ b/templates/form.html
@@ -46,7 +46,8 @@
     </div>
     <div id="ooi-announcement" class="uk-width-medium-3-5">
       <h2 class="uk-text-primary">提示</h2>
-	            <p>您已登录到yuudachi.moe的OOI主线服务器，你所登录的服务器将由系统自动判断并选择当前响应速度最快的服务器进行登录</p>
+      <p><a href="http://ooi.yuudachi.moe" target="_blank">东京主线（低延时连接DMM）</a>|<a href="http://osak.ooi.yuudachi.moe" target="_blank">大阪主线（电信网络优化）</a>|<a href="http://hkm2.ooi.yuudachi.moe">香港镜像（CN2转发 防抽风）</a> </p>
+      <p>您已登录到yuudachi.moe的OOI东京主线服务器，你所登录的服务器将由系统自动判断并选择当前响应速度最快的服务器进行登录</p>
       <p>本站采用了OOI系统，OOI (Online Objects Integration)是针对DMM网页游戏《艦隊これくしょ
 ん -艦これ-》的在线缓存系统。</p>
       <p>本站只支持DMM账号登录，不支持Facebook和Google账号登录。本网站不会保存任何用户信息，并对本网站服务可能造成的任何后果不负责任。</p>
